--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -82,4 +82,4 @@ workflows:
             - integration-test-1
           filters:
             branches:
-              only: master
+              only: main
