--- a/src/jobs/self-hosted.yml
+++ b/src/jobs/self-hosted.yml
@@ -18,12 +18,6 @@ executor:
     "
 
 parameters:
-  repository_auth_token:
-    type: env_var_name
-    default: RENOVATE_REPOSITORY_AUTH_TOKEN
-    description: |
-      Environment variable name for the Git repository Personal Auth Token for the bot account.
-      See https://github.com/renovatebot/renovate/blob/master/docs/usage/self-hosting.md#user-content-authentication
   config_file_path:
     type: string
     default: config.js
@@ -43,4 +37,4 @@ steps:
   - checkout
   - run:
       name: Execute Renovate CLI
-      command: renovate --token ${<< parameters.repository_auth_token >>}
+      command: renovate
