Move self-hosted configuration file validation to a new validate-self-hosted-config job
Since Renovate 26.11.0, renovate-config-validator throws an error if RENOVATE_CONFIG_FILE is defined but the file is not found.
The validate-config job sets the RENOVATE_CONFIG_FILE environment variable to the self_hosted_config_file_path argument.
Since self_hosted_config_file_path has a default value, RENOVATE_CONFIG_FILE will always be set even if not intending to validate a self-hosted configuration file, which results in an error if a self-hosted configuration file doesn't exist at that path.

--- a/src/examples/validate-self-hosted-config.yml
+++ b/src/examples/validate-self-hosted-config.yml
@@ -1,8 +1,9 @@
 description: |
-  Validate Renovate configuration file and self-hosted configuration file.
+  Validate Renovate self-hosted configuration file.
 
-  Configuration file definition: https://docs.renovatebot.com/configuration-options/
   Self-hosted configuration file docs: https://github.com/renovatebot/renovate/blob/master/docs/usage/self-hosting.md#user-content-configuration
+
+  Override self_hosted_config_file_path if the self-hosted configuration file is not at the default path (config.js).
 
 usage:
   version: 2.1
@@ -11,5 +12,6 @@ usage:
   workflows:
     lint:
       jobs:
-        - renovate/validate-config:
+        - renovate/validate-self-hosted-config:
+            renovate_version: $RENOVATE_VERSION
             self_hosted_config_file_path: renovate.config.js
